--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,5 @@ install: "pip install -r requirements.txt"
 script: 
     nosetests -v --with-coverage --cover-package=pylogger --with-doctest --cover-erase --exe
 after_success:
+    - coverage run main.py
     - coveralls
